:bug: Fixed tablet layout bug

--- a/src/container/Projects/Projects.scss
+++ b/src/container/Projects/Projects.scss
@@ -61,8 +61,12 @@
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
     }
 
-    @media screen and (min-width: 900px) {
-      width: 46%;
+    @media screen and (min-width: 800px) {
+      width: 45%;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 30%;
     }
   }
 
